Correct spacing on list of other stories on the bottom of a story

--- a/assets/css/scrolly.css
+++ b/assets/css/scrolly.css
@@ -61,6 +61,7 @@
 [data-layout="story"] .step {
   height: initial;
   opacity: 1;
+  min-height: initial !important;
 }
 
 .step.is-active {
